fixing speeds, adding copy and updating video on mobile

--- a/src/components/atoms/_videoWrapper.scss
+++ b/src/components/atoms/_videoWrapper.scss
@@ -31,8 +31,7 @@
   overflow-y: scroll;
 
   &__slide-in {
-    animation: slideUp 1500ms forwards;
-    animation-timing-function: ease-in;
+    animation: slideUp 2000ms forwards;
   }
 
   &__wrapper {
@@ -40,7 +39,6 @@
     animation-delay: 2.5s;
     opacity: 0;
     animation-fill-mode: forwards;
-    margin-top: 100px;
   }
 
   @media only screen and (max-width: 768px) {
@@ -49,9 +47,17 @@
       width: 100%;
       margin-top: 0;
       bottom: clear;
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 */
+      padding-top: 25px;
+      height: 0;
 
       iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
       }
     }
   }
